R2406:
======
- fix mDNS regression caused by IDF update

R2404:
======
- revert to IDF v5.1.1 (ESP32), due to console hang
- added support for full Latin1 character set
- fix SSD130x fillRect does not set dirty bits
- fix influx reinit
- fix relay persistency
- 1-wire updates
- more bugfixes

R2403:
======
- gracefully handle kiss-of-death packet of SNTP
- updated DHTxx driver
- added support for AHT10, AHT20
- added support for INA226, INA260
- added support for dynamic font loading
- added new font-tool
- added dynamic font loading support
- added font customization support
- updated fonts to include degree and copyright characters
- updated to IDF v5.1.2
- added display modes list to show only selected views
- added option to suppress Lua initialization
- screen resolution dependent font selection
- added screen customization support
  (change titles, select visible modes)
- adjusted TFTP request size
- updated OPT3001 driver: interrupts and custom configuration
- fix BQ25601D watchdog handling
- fix statemachine init done before all actions are registered
- fix HT16K33 init regression

R2401:
======
- fix DS18B20 negative values
- added I2C driver for ads1x1x

R2312:
======
- fix DS18B20 negative values
- fix ESP32-C3 1-wire regression
- fix for SSD1306 font rendering
- SSD130x code unification
- enable core temperature support on C3,S2,S3
- update atriumcfg config to include all configurations
- added support for rendering PNM icons (PBM, PGM, PPM)

R2311:
======
- added driver foc.config_init_high()r BQ25601D charging IC
- added BMP388
- added buzzer driver
- added USB-C interface driver for CC1/CC2 power detection
- added SPI per device bus frequency setting
- added LED init level support
- update to head of ESP8266 IDF v3.3
- screen/display caching
- font unifications and optimization
- many bug-fixes (ADC, XIO, SM, SSD130x, display, ...)

R2310:
======
- fixes for SGP30: re-initialize after error, false detection
- FTPd fixes
- bugfixes for SSD1309